--- a/bibliography.bib
+++ b/bibliography.bib
@@ -8,59 +8,154 @@
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+@misc{CDCDiabetesKidneyDisease,
+  title = {{Diabetes and Chronic Kidney Disease}},
+  howpublished = {\url{https://www.cdc.gov/diabetes/managing/diabetes-kidney-disease.html}},
+  note = {Centers for Disease Control and Prevention},
+  urlaccessdate = {December 4, 2023}
+}
 
-@book{pepe2003statistical,
-	Author = {Pepe, Margaret Sullivan},
-	Date-Added = {2014-10-27 17:28:41 +0000},
-	Date-Modified = {2014-10-27 17:53:38 +0000},
-	Publisher = {Oxford University Press},
-	Title = {The statistical evaluation of medical tests for classification and prediction},
-	Year = {2003}}
+@article{yacoub2010association,
+  title={Association between smoking and chronic kidney disease: a case control study},
+  author={Yacoub, Rabi and Habib, Habib and Lahdo, Ayham and Al Ali, Radwan and Varjabedian, Leon and Atalla, George and Kassis Akl, Nader and Aldakheel, Saleem and Alahdab, Saeed and Albitar, Sami},
+  journal={BMC public health},
+  volume={10},
+  number={1},
+  pages={1--6},
+  year={2010},
+  publisher={BioMed Central}
+}
 
-@article{hoerl1970ridge,
-	Author = {Hoerl, Arthur E and Kennard, Robert W},
-	Date-Added = {2014-10-27 17:28:25 +0000},
-	Date-Modified = {2014-10-27 17:28:25 +0000},
-	Journal = {Technometrics},
-	Number = {1},
-	Pages = {55--67},
-	Publisher = {Taylor \& Francis Group},
-	Title = {Ridge regression: Biased estimation for nonorthogonal problems},
-	Volume = {12},
-	Year = {1970}}
+@article{lakkis2018obesity,
+  title={Obesity and kidney disease},
+  author={Lakkis, Jay I and Weir, Mathew R},
+  journal={Progress in cardiovascular diseases},
+  volume={61},
+  number={2},
+  pages={157--167},
+  year={2018},
+  publisher={Elsevier}
+}
 
-@article{zou2005regularization,
-	Author = {Zou, Hui and Hastie, Trevor},
-	Date-Added = {2014-10-27 17:28:23 +0000},
-	Date-Modified = {2014-10-27 17:28:23 +0000},
-	Journal = {Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
-	Number = {2},
-	Pages = {301--320},
-	Publisher = {Blackwell Publishing Ltd},
-	Title = {Regularization and variable selection via the elastic net},
-	Volume = {67},
-	Year = {2005}}
+@article{gluba2019cholesterol,
+  title={Cholesterol disturbances and the role of proper nutrition in CKD patients},
+  author={Gluba-Brzozka, Anna and Franczyk, Beata and Rysz, Jacek},
+  journal={Nutrients},
+  volume={11},
+  number={11},
+  pages={2820},
+  year={2019},
+  publisher={MDPI}
+}
 
-@article{schoenfeld1982partial,
-	Author = {Schoenfeld, David},
-	Date-Added = {2014-10-27 17:28:09 +0000},
-	Date-Modified = {2014-10-27 17:28:09 +0000},
-	Journal = {Biometrika},
-	Number = {1},
-	Pages = {239--241},
-	Publisher = {Oxford University Press},
-	Title = {Partial residuals for the proportional hazards regression model},
-	Volume = {69},
-	Year = {1982}}
+@article{mallappallil2014chronic,
+  title={Chronic kidney disease in the elderly: evaluation and management},
+  author={Mallappallil, Mary and Friedman, Eli A and Delano, Barbara G and McFarlane, Samy I and Salifu, Moro O},
+  journal={Clinical Practice (London, England)},
+  volume={11},
+  number={5},
+  pages={525},
+  year={2014},
+  publisher={NIH Public Access}
+}
 
-@article{heagerty2000time,
-	Author = {Heagerty, Patrick J and Lumley, Thomas and Pepe, Margaret S},
-	Date-Added = {2014-10-27 17:28:02 +0000},
-	Date-Modified = {2014-10-27 17:28:02 +0000},
-	Journal = {Biometrics},
-	Number = {2},
-	Pages = {337--344},
-	Publisher = {Blackwell Publishing Ltd},
-	Title = {Time-dependent ROC curves for censored survival data and a diagnostic marker},
-	Volume = {56},
-	Year = {2000}}
+@article{chobot2018obesity,
+  title={Obesity and diabetes—Not only a simple link between two epidemics},
+  author={Chobot, Agata and G{\'o}rowska-Kowolik, Katarzyna and Soko{\l}owska, Magdalena and Jarosz-Chobot, Przemys{\l}awa},
+  journal={Diabetes/metabolism research and reviews},
+  volume={34},
+  number={7},
+  pages={e3042},
+  year={2018},
+  publisher={Wiley Online Library}
+}
+
+@article{yan2023interaction,
+  title={The Interaction Between Age and Risk Factors for Diabetes and Prediabetes: A Community-Based Cross-Sectional Study},
+  author={Yan, Zihui and Cai, Mengjie and Han, Xu and Chen, Qingguang and Lu, Hao},
+  journal={Diabetes, Metabolic Syndrome and Obesity},
+  pages={85--93},
+  year={2023},
+  publisher={Taylor \& Francis}
+}
+
+@article{will2001cigarette,
+  title={Cigarette smoking and diabetes mellitus: evidence of a positive association from a large prospective cohort study},
+  author={Will, Julie C and Galuska, Deborah A and Ford, Earl S and Mokdad, Ali and Calle, Eugenia E},
+  journal={International journal of epidemiology},
+  volume={30},
+  number={3},
+  pages={540--546},
+  year={2001},
+  publisher={Oxford University Press}
+}
+
+@article{petrie2018diabetes,
+  title={Diabetes, hypertension, and cardiovascular disease: clinical insights and vascular mechanisms},
+  author={Petrie, John R and Guzik, Tomasz J and Touyz, Rhian M},
+  journal={Canadian Journal of Cardiology},
+  volume={34},
+  number={5},
+  pages={575--584},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@article{cheng2022age,
+  title={Age-related changes in the risk of high blood pressure},
+  author={Cheng, Weibin and Du, Yumeng and Zhang, Qingpeng and Wang, Xin and He, Chaocheng and He, Jingjun and Jing, Fengshi and Ren, Hao and Guo, Mengzhuo and Tian, Junzhang and others},
+  journal={Frontiers in Cardiovascular Medicine},
+  volume={9},
+  pages={939103},
+  year={2022},
+  publisher={Frontiers}
+}
+
+@article{landi2018body,
+  title={Body mass index is strongly associated with hypertension: Results from the longevity check-up 7+ study},
+  author={Landi, Francesco and Calvani, Riccardo and Picca, Anna and Tosato, Matteo and Martone, Anna Maria and Ortolani, Elena and Sisto, Alex and D’Angelo, Emanuela and Serafini, Elisabetta and Desideri, Giovambattista and others},
+  journal={Nutrients},
+  volume={10},
+  number={12},
+  pages={1976},
+  year={2018},
+  publisher={MDPI}
+}
+
+@misc{CDCsmoking,
+  title = {{CDC Fact Sheet: Cigarette Smoking Among U.S. Adults}},
+  howpublished = {\url{https://www.cdc.gov/tobacco/data_statistics/fact_sheets/adult_data/cig_smoking/index.htm}},
+note = {Centers for Disease Control and Prevention},
+  urlaccessdate = {December 4, 2023}
+
+}
+
+@article{milyani2019effect,
+  title={The effect of body mass index and gender on lipid profile in children and adolescents in Saudi Arabia},
+  author={Milyani, Asmaa Adel and Al-Agha, Abdulmoein Eid},
+  journal={Annals of African Medicine},
+  volume={18},
+  number={1},
+  pages={42},
+  year={2019},
+  publisher={Wolters Kluwer--Medknow Publications}
+}
+
+@article{van2023meta,
+  title={Meta-analysis of the effects of smoking and smoking cessation on triglyceride levels},
+  author={van der Plas, Angela and Antunes, Meagan and Pouly, Sandrine and de La Bourdonnaye, Guillaume and Hankins, Matthew and Heremans, Annie},
+  journal={Toxicology Reports},
+  volume={10},
+  pages={367--375},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@article{bertolotti2014age,
+  title={Age-associated alterations in cholesterol homeostasis: evidence from a cross-sectional study in a Northern Italy population},
+  author={Bertolotti, Marco and Mussi, Chiara and Pellegrini, Elisa and Magni, Alessandro and Del Puppo, Marina and Ognibene, Silvia and Carulli, Lucia and Anzivino, Claudia and Baldelli, Enrica and Loria, Paola and others},
+  journal={Clinical Interventions in Aging},
+  pages={425--432},
+  year={2014},
+  publisher={Taylor \& Francis}
+}
