added exposure citation

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -159,3 +159,14 @@ note = {Centers for Disease Control and Prevention},
   year={2014},
   publisher={Taylor \& Francis}
 }
+
+@article{sica2008kidney,
+  title={The kidney and hypertension: causes and treatment},
+  author={Sica, Domenic A},
+  journal={The Journal of Clinical Hypertension},
+  volume={10},
+  number={7},
+  pages={541--548},
+  year={2008},
+  publisher={Wiley Online Library}
+}
