--- a/bibliography.bib
+++ b/bibliography.bib
@@ -160,3 +160,14 @@ note = {Centers for Disease Control and Prevention},
   year={2008},
   publisher={Wiley Online Library}
 }
+
+@article{fuchs2020high,
+  title={High blood pressure and cardiovascular disease},
+  author={Fuchs, Fl{\'a}vio D and Whelton, Paul K},
+  journal={Hypertension},
+  volume={75},
+  number={2},
+  pages={285--292},
+  year={2020},
+  publisher={Am Heart Assoc}
+}
