--- a/bibliography.bib
+++ b/bibliography.bib
@@ -160,3 +160,31 @@ note = {Centers for Disease Control and Prevention},
   year={2008},
   publisher={Wiley Online Library}
 }
+
+@article{FactsAboutHypertension,
+  title = {{Facts About Hypertension}},
+  howpublished = {\url{https://www.cdc.gov/bloodpressure/facts.htm#:~:text=About%201%20in%204%20adults,22.5%25%2C%2027.0%20million).&text=About%20half%20of%20adults%20(45,includes%2037%20million%20U.S.%20adults.}},
+  note = {Centers for Disease Control and Prevention},
+  urlaccessdate = {December 4, 2023}
+}
+
+@article{fuchs2020high,
+  title={High blood pressure and cardiovascular disease},
+  author={Fuchs, Fl{\'a}vio D and Whelton, Paul K},
+  journal={Hypertension},
+  volume={75},
+  number={2},
+  pages={285--292},
+  year={2020},
+  publisher={Am Heart Assoc}
+}
+
+@article{adamczak2002kidney,
+  title={Kidney and hypertension},
+  author={Adamczak, Marcin and Zeier, Martin and Dikow, Ralf and Ritz, Eberhard},
+  journal={Kidney International},
+  volume={61},
+  pages={S62--S67},
+  year={2002},
+  publisher={Elsevier}
+}
