updated biblo and citations

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,8 +1,12 @@
-@misc{CDCDiabetesKidneyDisease,
-  title = {{Diabetes and Chronic Kidney Disease}},
-  howpublished = {\url{https://www.cdc.gov/diabetes/managing/diabetes-kidney-disease.html}},
-  note = {Centers for Disease Control and Prevention},
-  urlaccessdate = {December 4, 2023}
+@article{winocour2018diabetes,
+  title={Diabetes and chronic kidney disease: an increasingly common multi-morbid disease in need of a paradigm shift in care},
+  author={Winocour, PH},
+  journal={Diabetic Medicine},
+  volume={35},
+  number={3},
+  pages={300--305},
+  year={2018},
+  publisher={Wiley Online Library}
 }
 
 @article{yacoub2010association,
@@ -112,12 +116,15 @@
   publisher={MDPI}
 }
 
-@misc{CDCsmoking,
-  title = {{CDC Fact Sheet: Cigarette Smoking Among U.S. Adults}},
-  howpublished = {\url{https://www.cdc.gov/tobacco/data_statistics/fact_sheets/adult_data/cig_smoking/index.htm}},
-note = {Centers for Disease Control and Prevention},
-  urlaccessdate = {December 4, 2023}
-
+@article{rogers1995demographic,
+  title={Demographic and socioeconomic links to cigarette smoking},
+  author={Rogers, Richard G and Nam, Charles B and Hummer, Robert A},
+  journal={Social biology},
+  volume={42},
+  number={1-2},
+  pages={1--21},
+  year={1995},
+  publisher={Taylor \& Francis}
 }
 
 @article{milyani2019effect,
@@ -161,11 +168,15 @@ note = {Centers for Disease Control and Prevention},
   publisher={Wiley Online Library}
 }
 
-@article{FactsAboutHypertension,
-  title = {{Facts About Hypertension}},
-  howpublished = {\url{https://www.cdc.gov/bloodpressure/facts.htm#:~:text=About%201%20in%204%20adults,22.5%25%2C%2027.0%20million).&text=About%20half%20of%20adults%20(45,includes%2037%20million%20U.S.%20adults.}},
-  note = {Centers for Disease Control and Prevention},
-  urlaccessdate = {December 4, 2023}
+@article{wang2005epidemiology,
+  title={Epidemiology of uncontrolled hypertension in the United States},
+  author={Wang, Thomas J and Vasan, Ramachandran S},
+  journal={Circulation},
+  volume={112},
+  number={11},
+  pages={1651--1662},
+  year={2005},
+  publisher={Am Heart Assoc}
 }
 
 @article{fuchs2020high,
