--- a/final-project.Rmd
+++ b/final-project.Rmd
@@ -14,7 +14,7 @@ keywords:
 - inference, statistics, health, research
 
 abstract: |
-  In the realm of medical research, the importance of managing Blood Pressure (BP) to control the risk of cardiovascular disease is established and commonly known. However, the control of BP (defined as systolic BP < 140 and diastolic BP < 90) among US adults with hypertension in the United States, has been decreasing over the past decade. Using publicly available data, this study aims to identify a potential factor contributing to this decline in BP control among hypertensive US adults. Our analysis emphasizes the potential role of kidney disease as an influential factor contributing to this trend. Through classical causal analysis techniques, our findings reveal that the presence of kidney disease substantially increases an individual's likelihood of not achieving the recommended BP control levels by 8% (6.4,8.9)_____. The discovery of this relationship highlights the importance of management techniques targeting both hypertension and kidney disease_____ in an attempt to increase the prevalence of proper BP control among hypertensive US adults. By addressing these conditions together, healthcare systems can potentially prevent cardiovascular diseases more efficiently, and promptly, enhancing overall patient well-being. 
+  In the realm of medical research, the importance of managing Blood Pressure (BP) to control the risk of cardiovascular disease is established and commonly known. However, the control of BP (defined as systolic BP < 140 and diastolic BP < 90) among US adults with hypertension in the United States, has been decreasing over the past decade. Using publicly available data, this study aims to identify a potential factor contributing to this decline in BP control among hypertensive US adults. Our analysis emphasizes the potential role of kidney disease as an influential factor contributing to this trend. Through classical causal analysis techniques, our findings reveal that the presence of kidney disease substantially increases an individual's probability of not achieving the recommended BP control levels by 0.27, with a 95% confidence interval from (0.260 to 0.291). The discovery of this relationship highlights the importance of management techniques targeting both hypertension and kidney disease in an attempt to increase the prevalence of proper BP control among hypertensive US adults. By addressing these conditions together, healthcare systems can potentially prevent cardiovascular diseases more efficiently, and promptly, enhancing overall patient well-being. 
   
 bibliography: bibliography.bib
 output: rticles::biometrics_article
@@ -31,7 +31,7 @@ According to @wang2005epidemiology, approximately 1 in 4 U.S. adults have uncont
 
 ## Data {#data}
 
-Data from the US National Health and Nutrition Examination Survey (NHANES) was used to help answer this causal question, with potential confounding variables identified. According to @winocour2018diabetes, approximately 30 to 40 percent of adults with diabetes has Cronic Kidney Disease (CKD). Furthermore, there have been a number of publications that support other factors such as smoking [@yacoub2010association], Body Mass Index (BMI) [@lakkis2018obesity], cholesterol [@gluba2019cholesterol], diabetes [@winocour2018diabetes], and age [@mallappallil2014chronic] all having an impact on the prevalence of kidney disease within an individual. However, these associations are highly interrelated with one another, and their relationships with one another must properly be specified. While arguably, diabetes is one of the leading causes of kidney disease [@winocour2018diabetes], other factors previously mentioned, such as BMI [@chobot2018obesity], age [@yan2023interaction], and smoking [@will2001cigarette] all possess an association with diabetes and need be considered. Likewise, it has been shown that there is an association between one's age and their smoking habits [@rogers1995demographic] which needs to be taken into consideration as well. To add further complexity, there have been a large number of studies highlighting the amount of factors that influence one's cholesterol as well. According to @milyani2019effect BMI can influence one's cholesterol levels, but so can smoking [@van2023meta], and age [@bertolotti2014age] can too. Furthermore, our response variable of blood pressure control also has contributing associations that must be accounted for. According to @petrie2018diabetes, diabetes can also influence one's blood pressure, but so can an individual's age [@cheng2022age], and BMI [@landi2018body]. Due to the interconnectedness that many of the variables within the dataset have, it is important that a proper directed acyclic gragh (DAG) is constructed to monitor and manage these relationships, as seen in Figure 1. Our aim is that through proper modeling of how these confounding measurements interact with one another, we can better understand what the causal effect of kidney disease on blood pressure control on adults in the United States.
+Data from the US National Health and Nutrition Examination Survey (NHANES) was used to help answer this causal question, with potential confounding variables identified. The original data contained close to 60,000 observations, however due to the omission of missing data, only 23,388 observations were used in this study as well as subset of variables. According to @winocour2018diabetes, approximately 30 to 40 percent of adults with diabetes has Chronic Kidney Disease (CKD). Furthermore, there have been a number of publications that support other factors such as smoking [@yacoub2010association], Body Mass Index (BMI) [@lakkis2018obesity], cholesterol [@gluba2019cholesterol], diabetes [@winocour2018diabetes], and age [@mallappallil2014chronic] all having an impact on the prevalence of kidney disease within an individual. However, these associations are highly interrelated with one another, and their relationships with one another must properly be specified. While arguably, diabetes is one of the leading causes of kidney disease [@winocour2018diabetes], other factors previously mentioned, such as BMI [@chobot2018obesity], age [@yan2023interaction], and smoking [@will2001cigarette] all possess an association with diabetes and need be considered. Likewise, it has been shown that there is an association between one's age and their smoking habits [@rogers1995demographic] which needs to be taken into consideration as well. To add further complexity, there have been a large number of studies highlighting the amount of factors that influence one's cholesterol as well. According to @milyani2019effect BMI can influence one's cholesterol levels, but so can smoking [@van2023meta], and age [@bertolotti2014age] can too. Furthermore, our response variable of blood pressure control also has contributing associations that must be accounted for. According to @petrie2018diabetes, diabetes can also influence one's blood pressure, but so can an individual's age [@cheng2022age], and BMI [@landi2018body]. Due to the interconnectedness that many of the variables within the dataset have, it is important that a proper directed acyclic graph (DAG) is constructed to monitor and manage these relationships, as seen in Figure 1. Our aim is that through proper modeling of how these confounding measurements interact with one another, we can better understand what the causal effect of kidney disease on blood pressure control on adults in the United States.
 
 ## Statistical Analysis {#statAnalysis}
 
@@ -39,22 +39,22 @@ To answer the question at hand, we chose to do a causal analysis. This consisted
 
 # Results {#results}
 
-From our statistical analysis, we show that among people like those included in this data set, having kidney disease increases the expected risk of having uncontrolled blood pressure by 0.27, with a 95% confidence interval of -0.291 to -0.260. This causal analysis adjusts for BMI, age, and diabetes. While this analysis is significant, there is a possibility for unmeasured confounders to tip this result to be insignificant. Unmeasured confounders can include, but are not limited to, alcohol consumption, exercise, and other difficult to measure lifestyle choice variables. From our tipping point analysis, we see that the with a confounder exposure scaled mean difference of one, the relationship between the confounder and outcome would need to be roughly -0.26 to tip this analysis to insignificant. As the scaled mean difference between the confounder and exposure increases, the relationship necessary to tip the analysis result to insignificant between the confounder and outcome decreases, moving closer to zero. For example, a scaled mean difference of five would need a relationship between the outcome and confounder of -0.05 to prove an insignificant result. 
+From our statistical analysis, we show that among people like those included in this data set, having kidney disease increases the expected risk of having uncontrolled blood pressure by 0.27, with a 95% confidence interval of to 0.260 to 0.291. This causal analysis adjusts for BMI, age, and diabetes. While this analysis is significant, there is a possibility for unmeasured confounders to tip this result to be insignificant. Unmeasured confounders can include, but are not limited to, alcohol consumption, exercise, and other difficult to measure lifestyle choice variables. From our tipping point analysis, we see that the with a confounder exposure scaled mean difference of one, the relationship between the confounder and outcome would need to be roughly -0.26 to tip this analysis to insignificant. As the scaled mean difference between the confounder and exposure increases, the relationship necessary to tip the analysis result to insignificant between the confounder and outcome decreases, moving closer to zero. For example, a scaled mean difference of five would need a relationship between the outcome and confounder of -0.05 to prove an insignificant result. 
 
 # Conclusion {#conclusion}
 
-In conclusion, our causal analysis kinds a statistically significant realationship between kidney disease and blood pressure control. After creating a causal diagram backed from research and determining the correct adjustment set, a propensity score model was built with average treatment effect (ATE) weights to answer the specific causal question concerning the entire population of the data set. We then were able to calcuate the ATE by G-computation and a confidence interval from bootstrapping to find that for those included in this data set, having kidney disease increases the expected risk of having uncontrolled blood pressure by 0.27, with a 95% confidence interval of -0.291 to -0.260. A thorough sensitivity analysis shows that it is possible to tip the analysis to insignificant with a strong unmeasured confounder, but no confounders are present at this time. 
+In conclusion, our causal analysis kinds a statistically significant realationship between kidney disease and blood pressure control. After creating a causal diagram backed from research and determining the correct adjustment set, a propensity score model was built with average treatment effect (ATE) weights to answer the specific causal question concerning the entire population of the data set. We then were able to calcuate the ATE by G-computation and a confidence interval from bootstrapping to find that for those included in this data set, having kidney disease increases the expected risk of having uncontrolled blood pressure by 0.27, with a 95% confidence interval of 0.260 to 0.291. A thorough sensitivity analysis shows that it is possible to tip the analysis to insignificant with a strong unmeasured confounder, but no confounders are present at this time. 
 
-# Tables and Figures {#tabs}
 
-```{r fig1, out.width = "400px", fig.cap = "DAG", echo = FALSE, dev = "pdf"}
+```{r, out.width = "400px", fig.cap = "Causal diagram of confounders with exposure of kidney disease and outcome of blood pressure control. The confounders circled in red are the adjustment set we used in the propensity score model.", echo = FALSE, dev = "pdf"}
 # michael
 #knitr::include_graphics("~/Causal/final-project/DAG.jpg")
 # melita
 knitr::include_graphics("~/STA779/final-project/DAG.jpg")
 ```
 
-```{r fig2, out.width = "400px", fig.cap = "Propensity Score", echo = FALSE, dev = "pdf"}
+
+```{r, out.width = "400px", fig.cap = "Propensity score distributions: unweighted distribution on the left shows a drastic imbalance in the exposure groups. The ATE weighted distribution on the right is much more balanced between exposure groups.", echo = FALSE, dev = "pdf"}
 # michael
 #knitr::include_graphics("~/Causal/final-project/Propensity_Score.jpg")
 # melita
